<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:fitsSystemWindows="true"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="536dp"
			app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

		<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				>

			<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/mcdonalds_welcome"
					android:textAlignment="center"
					android:gravity="center_horizontal"
					android:textSize="20sp"
					android:textStyle="bold"
					android:layout_margin="20dp"/>

			<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/mcdonalds_chooseproduct"
					android:textSize="16sp"/>

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal">
				<ImageView
						android:id="@+id/mcdonalds_image_bigmac"
						android:layout_width="80dp"
						android:layout_height="80dp"
						android:layout_margin="20dp"
						android:clickable="true"
						android:focusable="true"
						android:src="@drawable/bigmack"
						android:contentDescription="@string/mcdonalds_image_bigmac_desc"/>

				<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_margin="20dp"
						android:text="@string/mcdonalds_bigmack"/>
			</LinearLayout>

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal">
				<ImageView
						android:id="@+id/mcdonalds_image_chicken"
						android:layout_width="80dp"
						android:layout_height="80dp"
						android:layout_margin="20dp"
						android:clickable="true"
						android:focusable="true"
						android:src="@drawable/chicken"
						android:contentDescription="@string/mcdonalds_image_chicken_desc"/>

				<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_margin="20dp"
						android:text="@string/mcdonalds_chicken"/>
			</LinearLayout>

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal">
				<ImageView
						android:id="@+id/mcdonalds_image_fish"
						android:layout_width="80dp"
						android:layout_height="80dp"
						android:layout_margin="20dp"
						android:clickable="true"
						android:focusable="true"
						android:src="@drawable/fish"
						android:contentDescription="@string/mcdonalds_image_fish_desc"/>

				<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_margin="20dp"
						android:text="@string/mcdonalds_fish"/>
			</LinearLayout>
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>