<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:fitsSystemWindows="true"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appbar"
			android:fitsSystemWindows="true"

			android:layout_height="192dp"
			android:layout_width="match_parent">

		<androidx.constraintlayout.utils.widget.ImageFilterView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:src="@drawable/ic_banner_foreground"
				android:id="@+id/imageFilterView2"/>

	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
		>
			<TextView
					android:text="@string/home_intro"
					android:textAlignment="center"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/textView2"
					android:layout_marginTop="8dp"
					android:textSize="20sp"
					android:layout_marginLeft="16dp"
					android:layout_marginStart="16dp"
					android:layout_marginRight="16dp"
					android:layout_marginEnd="16dp"
					android:gravity="center_horizontal"/>

			<Button
					android:text="@string/home_button_viewCalculator"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/home_intro_btn"
					android:onClick="openCalculatorView"/>

			<Button
					android:text="@string/home_button_viewZodiac"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/home_intro_zodiac"
					android:onClick="openZodiacView"/>
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>