<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:fitsSystemWindows="true"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/appbar"
			android:fitsSystemWindows="true"
			android:layout_height="192dp"
			android:layout_width="match_parent">

		<androidx.constraintlayout.utils.widget.ImageFilterView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:src="@drawable/ic_banner_foreground"
				android:id="@+id/imageFilterView2"/>
	</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
			android:layout_width="wrap_content"
			android:layout_height="536dp"
			app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

		<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				>

			<ImageView
					android:layout_width="452dp"
					android:layout_height="150dp"
					android:src="@drawable/calculator"
					android:contentDescription="@string/title_activity_calculator"
					android:cropToPadding="false"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"/>

			<EditText
					android:id="@+id/calculator_value_1"
					android:layout_width="377dp"
					android:layout_height="50dp"
					android:importantForAutofill="no"
					android:inputType="number"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp">
			</EditText>

			<EditText
					android:id="@+id/calculator_value_2"
					android:layout_width="377dp"
					android:layout_height="50dp"
					android:importantForAutofill="no"
					android:inputType="number"
					android:layout_marginBottom="10dp">
			</EditText>

			<TextView
					android:layout_width="200dp"
					android:layout_height="wrap_content"
					android:text="@string/calculator_pick_operation"
					android:textAlignment="center"
					android:gravity="center_horizontal"
					android:textSize="20sp"
					android:layout_marginBottom="5dp"/>

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal">
				<ImageView
						android:id="@+id/calculator_add_btn"
						android:layout_width="100dp"
						android:layout_height="50dp"
						android:contentDescription="@string/title_activity_calculator"
						android:src="@drawable/addition1"
						android:onClick="add"/>
				<ImageView
						android:id="@+id/calculator_subtract_btn"
						android:layout_width="100dp"
						android:layout_height="50dp"
						android:contentDescription="@string/title_activity_calculator"
						android:src="@drawable/minus1"
						android:onClick="subtract"/>
				<ImageView
					android:id="@+id/calculator_multiply_btn"
					android:layout_width="100dp"
					android:layout_height="50dp"
					android:contentDescription="@string/title_activity_calculator"
					android:src="@drawable/multi1"
					android:onClick="multiply"/>
				<ImageView
					android:id="@+id/calculator_divide_btn"
					android:layout_width="100dp"
					android:layout_height="50dp"
					android:contentDescription="@string/title_activity_calculator"
					android:src="@drawable/devision1"
					android:onClick="divide"/>
			</LinearLayout>

			<TextView
					android:id="@+id/calculator_result"
					android:layout_width="200dp"
					android:layout_height="wrap_content"
					android:text="@string/calculator_result_text"
					android:textAlignment="center"
					android:gravity="center_horizontal"
					android:textSize="20sp"
					android:layout_marginTop="10dp"/>
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>